# AI_Econ_daioe_years_v2

./: .dockerignore  .gitignore  Dockerfile  README.md  _brand.yml  app.py  app_v2.py  daioe_ssyk12.ipynb  main.py  pyproject.toml  setup.py  ssyk12_pipeline.ipynb  structure_ssyk12.csv  test_plotly.js  test_shinywidgets.py  visuals.py
.github/workflows/: 01_scb_pull_to_daioe_pull.yml  02_daioe_pull_to_development.yml  03_development_to_main.yml  sync_to_hub.yml
data/: daioe_scb_years_processed.parquet
data/processed/: ssyk12_aggregated_ssyk4_to_ssyk1.parquet
md_files/: intro.md
scripts/: aggregate.py  merge.py  pull.py
src/: calcs.py  setup.py  visuals.py
www/: plotly_export.js
