[project]
name = "ai-econ-daioe-years-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faicons>=0.2.2",
    "great-tables>=0.21.0",
    "kaleido>=0.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "plotly[express]>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "shiny[theme]>=1.6.1",
    "shinywidgets>=0.8.1",
]
